updated to version 17, DRM enabled